--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "botkit": "^0.6.21",
+    "botkit-middleware-dialogflow": "^2.0.4",
     "express": "^4.16.4",
     "express-hbs": "^1.0.4"
   }
