--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "botkit": "^0.6.21",
     "botkit-middleware-dialogflow": "^2.0.4",
     "express": "^4.16.4",
-    "express-hbs": "^1.0.4"
+    "express-hbs": "^1.0.4",
+    "express-session": "^1.15.6",
+    "node-env-file": "^0.1.8"
   }
 }
